# xcalibre-server

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  HANDOFF.md  README.md  TEST_PHASES.md  config.example.toml  config.toml  package.json  pnpm-lock.yaml  turbo.json
.cargo/: audit.toml
.claude/: settings.json
.github/workflows/: ci.yml  docker.yml  e2e.yml  i18n-check.yml
.turbo/cache/: 4499b8c59fff8644-manifest.json  4499b8c59fff8644-meta.json  4499b8c59fff8644.tar.zst  450575e1a5d470d9-manifest.json  450575e1a5d470d9-meta.json  450575e1a5d470d9.tar.zst  f210a47ef920fb9b-manifest.json  f210a47ef920fb9b-meta.json
apps/mobile/: app.config.js  app.json  eas.json  metro.config.js  package.json  tailwind.config.js  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/web/: index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
autolibre-mcp/: Cargo.toml
autolibre-mcp/src/: main.rs
autolibre-mcp/src/tools/: mod.rs
autolibre-mcp/tests/: test_mcp_tools.rs
backend/: Cargo.toml
backend/benches/: api_benchmarks.rs
backend/migrations/mariadb/: 0001_initial.sql  0002_document_type.sql  0003_security_hardening.sql  0004_api_tokens.sql  0005_email_settings.sql  0006_oauth_accounts.sql  0007_kobo.sql  0008_libraries.sql  0009_book_user_state.sql  0010_download_history.sql  0011_user_tag_restrictions.sql  0012_scheduled_tasks.sql  0013_totp.sql  0014_annotations.sql  0015_goodreads_import.sql  0017_webhooks.sql  0018_chunks.sql  0019_collections.sql  0022_collections_idx.sql  0023_chunks_idx.sql  0024_session_type.sql  0025_api_token_expiry.sql  0026_api_token_scope.sql  0027_book_user_state_book_id_idx.sql  0028_memory_chunks.sql
backend/migrations/sqlite/: 0001_initial.sql  0002_fts.sql  0003_document_type.sql  0004_security_hardening.sql  0005_api_tokens.sql  0006_email_settings.sql  0007_oauth_accounts.sql  0008_kobo.sql  0009_libraries.sql  0010_book_user_state.sql  0011_download_history.sql  0012_user_tag_restrictions.sql  0013_scheduled_tasks.sql  0014_totp.sql  0015_annotations.sql  0016_goodreads_import.sql  0017_author_profiles.sql  0018_webhooks.sql  0020_chunks_fts.sql  0020_collections.sql  0022_collections_idx.sql  0023_chunks_idx.sql  0024_session_type.sql  0025_api_token_expiry.sql  0026_api_token_scope.sql  0027_book_user_state_book_id_idx.sql  0028_memory_chunks.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  scheduler.rs  state.rs  storage.rs  storage_s3.rs  webhooks.rs
backend/src/api/: admin.rs  auth.rs  authors.rs  books.rs  collections.rs  docs.rs  health.rs  kobo.rs  llm.rs  memory.rs  mod.rs  opds.rs  search.rs  shelves.rs  users.rs  webhooks.rs
backend/src/auth/: api_tokens.rs  ldap.rs  mod.rs  password.rs  totp.rs
backend/src/db/: mod.rs  models.rs
backend/src/db/queries/: annotations.rs  api_tokens.rs  auth.rs  authors.rs  book_chunks.rs  book_insert.rs  book_user_state.rs  books.rs  collections.rs  download_history.rs  email_settings.rs  import_logs.rs  kobo.rs  libraries.rs  llm.rs  memory_chunks.rs  mod.rs  oauth.rs  opds.rs  scheduled_tasks.rs  shelves.rs  stats.rs  tags.rs  totp.rs  user_tag_restrictions.rs  webhooks.rs
backend/src/ingest/: chunker.rs  goodreads.rs  mobi_util.rs  mod.rs  text.rs  vision.rs
backend/src/llm/: chat.rs  classify.rs  classify_type.rs  derive.rs  embeddings.rs  job_runner.rs  mod.rs  quality.rs  synthesize.rs  validate.rs  vision.rs
backend/src/metadata/: google_books.rs  mod.rs  open_library.rs
backend/src/middleware/: auth.rs  kobo.rs  mod.rs  security_headers.rs
backend/src/search/: fts5.rs  meili.rs  mod.rs  semantic.rs
backend/tests/: admin_jobs.rs  fts_search.rs  llm_classify.rs  llm_features.rs  meili_search.rs  search_api.rs  semantic_search.rs  test_admin.rs  test_annotations.rs  test_api_tokens.rs  test_auth.rs  test_author_management.rs  test_author_photos.rs  test_book_user_state.rs  test_books.rs  test_browse.rs  test_bulk_edit.rs  test_chunker.rs  test_chunks_api.rs  test_collections.rs  test_comic.rs  test_config.rs  test_covers.rs  test_custom_columns.rs  test_download_history.rs  test_email.rs  test_file_serving.rs  test_goodreads_import.rs  test_health.rs  test_hybrid_search.rs  test_ingest_text.rs  test_kobo.rs  test_libraries.rs  test_memory.rs  test_merge.rs  test_metadata.rs  test_metrics.rs  test_mobi_reader.rs  test_oauth.rs  test_opds.rs  (+14 more)
backend/tests/common/: mod.rs
backend/tests/fixtures/: fake.epub  minimal.azw3  minimal.epub  minimal.mobi
calibre-migrate/: Cargo.toml
calibre-migrate/src/: lib.rs  main.rs  report.rs
calibre-migrate/src/calibre/: reader.rs  schema.rs
calibre-migrate/src/import/: covers.rs  pipeline.rs
calibre-migrate/tests/: test_dryrun.rs  test_import.rs  test_reader.rs
calibre-migrate/tests/common/: mod.rs
docker/: Caddyfile  Dockerfile  docker-compose.production.yml  docker-compose.yml  prometheus.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODEX_COMMANDS.md  CODEX_COMMANDS_GITHUB_PUBLISH.md  CODEX_COMMANDS_PHASE10.md  CODEX_COMMANDS_PHASE10_FIXES.md  CODEX_COMMANDS_PHASE11.md  CODEX_COMMANDS_PHASE12.md  CODEX_COMMANDS_PHASE13.md  CODEX_COMMANDS_PHASE14.md  CODEX_COMMANDS_PHASE15.md  CODEX_COMMANDS_PHASE16.md  CODEX_COMMANDS_PHASE17.md  CODEX_COMMANDS_PHASE18.md  CODEX_COMMANDS_PHASE19.md  CODEX_COMMANDS_PHASE2.md  CODEX_COMMANDS_PHASE20.md  CODEX_COMMANDS_PHASE21.md  CODEX_COMMANDS_PHASE3.md  CODEX_COMMANDS_PHASE4.md  CODEX_COMMANDS_PHASE5.md  CODEX_COMMANDS_PHASE6.md  CODEX_COMMANDS_PHASE7.md  CODEX_COMMANDS_PHASE8.md  CODEX_COMMANDS_PHASE9.md  CONTRIBUTING.md  DECISIONS.md  DEPLOY.md  DESIGN.md  DEVELOPER_GUIDE.md  HANDOFF.md  LLM_GUIDE.md  MCP.md  PERFORMANCE.md  REQUIREMENTS.md  SCHEMA.md  SECURITY.md  SKILLS.md  STATE.md  (+1 more)
scripts/: backup.sh  check-translations.ts  restore.sh
tools/: mcp_server.js  package-lock.json  package.json
xs-mcp/: Cargo.toml
xs-mcp/src/: main.rs
xs-mcp/src/tools/: mod.rs
xs-mcp/src/transport/: sse.rs  stdio.rs
xs-mcp/tests/: test_mcp_tools.rs
xs-migrate/: Cargo.toml
(+145 files in other folders)
