[package]
name = "autolibre-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
backend = { path = "../backend" }
config = "0.14"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.5.0", features = ["server", "client", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
