[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
default = ["meilisearch", "sqlite-vec"]
meilisearch = ["dep:meilisearch-sdk"]
sqlite-vec = ["dep:sqlite-vec"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
argon2 = "0.5"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
axum = { version = "0.7", features = ["macros", "multipart", "json"] }
axum-prometheus = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.22"
bytes = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
cron = "0.12"
aes-gcm = "0.10"
futures = "0.3"
governor = "0.6"
http = "1"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
image = { version = "0.25", features = ["jpeg", "png", "webp", "gif"] }
jsonwebtoken = "9"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
meilisearch-sdk = { version = "0.27", optional = true }
mime = "0.3"
mime_guess = "2"
mobi = "0.7"
oauth2 = "4"
ipnet = "2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlite-vec = { version = "0.1", optional = true } # SQLite extension, loaded at runtime
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
subtle = "2"
semver = "1"
totp-rs = { version = "5", features = ["gen_secret", "qr"] }
toml = "0.8"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate", "uuid", "chrono", "json"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower_governor = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
validator = { version = "0.20", features = ["derive"] }
roxmltree = "0.20"
urlencoding = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
unrar = "0.5"
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

[dev-dependencies]
axum-test = "14"
criterion = { version = "0.5", features = ["async_tokio"] }
fake = { version = "2", features = ["derive"] }
pretty_assertions = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"

[[bench]]
name = "api_benchmarks"
harness = false
